--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -188,6 +188,9 @@
         left: 0px;
         width:260px;
         .transition-duration(0.3s);
+        @media (max-width:1200px) {
+            top: 126px;
+        }
         @media (max-width: 1230px) {
             left: -260px;
         }
@@ -216,6 +219,9 @@
             background: #868686;
             cursor: pointer;
             .transition-duration(0.3s);
+            @media (max-width:1200px) {
+                top: 126px;
+            }            
             @media (max-width: 1230px) {
                 left: 0;
                 padding-top: 6px;
