--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
@@ -208,6 +208,9 @@
 	// @media (max-width: 1230px) {
 	// 	left: -265px;
 	// }
+	@media (max-width: 1200px) {
+		top: 110px;
+	}
 	&.video-is-open{
 		left: 0px;
 		// @media (max-width: 1230px) {
