--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
@@ -208,8 +208,8 @@
 	// @media (max-width: 1230px) {
 	// 	left: -265px;
 	// }
-	@media (max-width: 1200px) {
-		top: 110px;
+	@media @desktop-def {
+		top: 90px;
 	}
 	&.video-is-open{
 		left: 0px;
@@ -244,6 +244,9 @@
 	box-shadow: none;
 	top: 175px;
 	padding: 0;
+	@media @desktop-def {
+		top: 130px;
+	}
 	@media (max-width: 1295px) {
 		position: absolute;
 	}
