--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -970,6 +970,52 @@ nav.wallnut-nav .walnut-account > li > a:focus {
   font: 16px open-sans, arial;
   cursor: pointer;
 }
+.quiz-cards .notification > span {
+  background: none repeat scroll 0 0 #fcea98;
+  color: #000;
+  text-align: left;
+  font-family: open-sans;
+  border-radius: 5px;
+  font-size: 0.9em;
+  font-weight: bold;
+  line-height: 1.5em;
+  padding: 10px;
+  width: 240px;
+  top: -4.5em;
+  left: -31px;
+  margin-left: 0;
+  z-index: 1032;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  position: absolute;
+  text-align: center;
+  text-transform: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.quiz-cards .notification > span:after {
+  border-color: #fcea98 rgba(0, 0, 0, 0);
+  border-style: solid;
+  border-width: 15px 15px 0;
+  bottom: -15px;
+  content: "";
+  display: block;
+  left: 31px;
+  position: absolute;
+  width: 0;
+}
+.quiz-cards .notification:hover span {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  top: -5.5em;
+  z-index: 1032;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
 .quiz-cards .quiz-img {
   -webkit-flex-basis: 30%;
   flex-basis: 30%;
