--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
@@ -49,7 +49,49 @@
         border-radius: 50%;
         color: #fff;
         font: 16px open-sans, arial;
-        cursor: pointer;
+        cursor: pointer;      
+        & > span{
+            background: none repeat scroll 0 0 #fcea98; 
+            color: #000;
+            text-align: left;
+            font-family: open-sans;
+            border-radius: 5px;
+            font-size: 0.9em;
+            font-weight: bold;
+            line-height: 1.5em;
+            padding: 10px;
+            width: 240px;
+            top: -4.5em;  
+            left: -31px;
+            margin-left: 0; 
+            z-index: 1032;
+            opacity: 0;
+            filter: alpha(opacity=0);   
+            position: absolute;
+            text-align: center; 
+            text-transform: none;
+            .transition(all 0.3s ease-in-out);
+            &:after{
+                border-color: #fcea98 rgba(0, 0, 0, 0);
+                border-style: solid;
+                border-width: 15px 15px 0;
+                bottom: -15px;
+                content: "";
+                display: block;
+                left: 31px;
+                position: absolute;
+                width: 0;
+            }
+        }    
+        &:hover{
+            & span{
+                opacity: 1;
+                filter: alpha(opacity=100);
+                top: -5.5em;
+                z-index: 1032;
+                .transition(all 0.2s ease);
+            }
+        }
     }
     .quiz-img {
         .flex-basis(30%);
