--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -709,17 +709,7 @@ nav.wallnut-nav .walnut-account > li > a:focus {
   position: absolute;
   width: 100%;
   z-index: 99999;
-  top: 180px;
-}
-@media (max-width: 1370px) {
-  .signin-card .signin-wrapper {
-    top: 150px;
-  }
-}
-@media only screen and (min-width: 530px) and (max-width: 767px) {
-  .signin-card .signin-wrapper {
-    top: 95px;
-  }
+  top: -25px;
 }
 .signin-card .signin-wrapper .wrapped {
   -webkit-box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
@@ -952,6 +942,9 @@ nav.wallnut-nav .walnut-account > li > a:focus {
   position: relative;
   overflow: inherit;
   height: 220px;
+  /*Fixed z-index issue for notification tooltip*/
+  -webkit-animation-fill-mode: none !important;
+  animation-fill-mode: none !important;
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   .quiz-cards {
@@ -2209,6 +2202,11 @@ lesshat-selector {
   padding: 0 30px;
   border-right: 1px solid #ccc;
 }
+@media only screen and (max-width: 1024px) {
+  .quiz-subj {
+    height: inherit;
+  }
+}
 .teacher-app > .well {
   display: none;
 }
@@ -2478,6 +2476,11 @@ lesshat-selector {
     min-height: 218px !important;
   }
 }
+@media (max-width: 1230px) {
+  #question-display-region > div #content-board.quizContent #myCanvas #loading-content-board {
+    font-size: 2em;
+  }
+}
 #question-display-region > div #content-board.quizContent #myCanvas #question-area .element-wrapper {
   font-family: open-sans;
 }
@@ -2508,6 +2511,7 @@ lesshat-selector {
   top: 150px;
   left: 0px;
   width: 260px;
+  z-index: 1;
   -webkit-transition-duration: 0.3s;
   -moz-transition-duration: 0.3s;
   -o-transition-duration: 0.3s;
@@ -2515,7 +2519,7 @@ lesshat-selector {
 }
 @media only screen and (max-width: 1024px) {
   #quiz-progress-region .quizProgress {
-    top: 15px;
+    top: 35px;
   }
 }
 @media (max-width: 1230px) {
@@ -2558,7 +2562,7 @@ lesshat-selector {
 }
 @media only screen and (max-width: 1024px) {
   #quiz-progress-region .quizProgress .progressStrip {
-    top: 15px;
+    top: 35px;
   }
 }
 @media (max-width: 1230px) {
@@ -2750,6 +2754,8 @@ lesshat-selector {
     width: 100%;
     left: 0;
     bottom: 0;
+    z-index: 1;
+    background: #fff;
     text-align: center;
     margin: 0 auto;
     right: 0;
@@ -3013,6 +3019,16 @@ lesshat-selector {
   line-height: 20px;
   margin: 0;
 }
+@media only screen and (max-width: 1024px) {
+  .answrMsg {
+    margin: 0;
+    padding: 5px;
+  }
+  .answrMsg > h3,
+  .answrMsg > h4 {
+    font-size: 1.1em;
+  }
+}
 .timerBox,
 .quizProgress {
   width: 300px;
@@ -3094,6 +3110,54 @@ lesshat-selector {
 }
 .quizActions .submit2.submit-pushed {
   top: -209px;
+}
+.replay-actions {
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 235px;
+}
+@media (max-width: 1230px) {
+  .replay-actions {
+    top: 155px;
+  }
+}
+.replay-actions > div {
+  float: left;
+  margin: 0 auto;
+  width: 25%;
+  text-align: center;
+}
+@media (max-width: 1230px) {
+  .replay-actions > div {
+    width: 10%;
+  }
+}
+.replay-actions > div button {
+  width: 104px;
+  background: transparent url('../images/previous.png') no-repeat !important;
+  height: 108px;
+  box-shadow: none;
+}
+.replay-actions > div button:active {
+  box-shadow: none;
+}
+.replay-actions > div h4 {
+  color: #fe9f99;
+  text-transform: uppercase;
+  margin-top: 100px;
+  font-family: open-sans;
+}
+.replay-actions > div:last-child {
+  float: right;
+}
+@media (max-width: 1230px) {
+  .replay-actions > div:last-child {
+    right: 0;
+  }
+}
+.replay-actions > div:last-child button {
+  background: transparent url('../images/forward.png') no-repeat !important;
 }
 .teacher-app #quiz-details-region > div:last-child #try-again {
   margin: 18px 0px 18px 30px;
