corrected textbook spelling

--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/module-description/templates/module-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/module-description/templates/module-description.html
@@ -9,7 +9,7 @@
             </div>
             <div class="col-md-4">
                 <h3 class="no-margin semi-bold">
-                <label class="form-label text-grey">Textbookk</label>
+                <label class="form-label text-grey">Textbook</label>
                     {{getTextbookName}}
                 </h3>
             </div>
