zoomed walnut logo's on login and signup page for tablet view

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -696,6 +696,11 @@ nav.wallnut-nav .walnut-account > li > a:focus {
 .signin-header .signin-logo > img {
   width: 7%;
 }
+@media (max-width: 1024px) {
+  .signin-header .signin-logo > img {
+    width: 12%;
+  }
+}
 .signin-header .slogan {
   margin: 10px 0;
 }
