--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
@@ -28,6 +28,9 @@
          margin: 0;
          & > img {
              width: 7%;
+             @media (max-width: 1024px) {
+                 width: 12%;
+             }
          }
      }
      .slogan {
