--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -11,12 +11,26 @@ body {
 a {
   outline: 0;
 }
+a:hover,
+a:active,
+a:focus {
+  outline: 0;
+}
 h1,
 h2,
 h3,
 h4,
 h5 {
   font-weight: bold !important;
+}
+@-moz-document url-prefix() {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-weight: lighter !important;
+  }
 }
 a img {
   border: 0;
