Did workaround for second submit button

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3113,6 +3113,7 @@ lesshat-selector {
   width: 25%;
   top: -56px;
   right: 10px;
+  display: block;
 }
 @media only screen and (max-width: 1024px) {
   .quizActions .submit2 {
@@ -3128,6 +3129,7 @@ lesshat-selector {
   }
 }
 .quizActions .submit2.submit-pushed {
+  display: none;
   top: -209px;
 }
 .replay-actions {
