--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -726,6 +726,7 @@
         width: 25%;
         top: -56px;
         right: 10px;
+        display: block;
         @media @desktop-def {
             top: -52px;                    
         }         
@@ -736,6 +737,7 @@
             } 
         }
         &.submit-pushed{
+            display: none;
             top: -209px;
         }
     }
