--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/content-display/templates/content-display-item.html
@@ -1,5 +1,5 @@
 {{#isContentPiece}}
-<div class="contentPiece" data-type="content-piece" data-id="{{ID}}">
+<div class="contentPiece" id="timeline_lecture" data-type="content-piece" data-id="{{ID}}">
 
     <div class="cbp_tmicon info animated bounceIn">     <time class="cbp_tmtime" datetime="">
         <span class="time">{{duration}} <span class="semi-bold">mins</span></span>
