--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
@@ -58,5 +58,5 @@
 
 
 <div class="video-details">
-   <h4>You're here to view the <span>body organ</span> lecture</h4>
+   <h4>You're here to view <span>{{name}}</span> lecture</h4>
 </div>
