removed height for quiz and lecture details

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
@@ -17,12 +17,11 @@
 
 .quiz-subj {
     .box-shadow(10px 0 15px -6px #CCC, -12px 0 8px -4px #ccc);
-    height: 100vh;
     padding: 0 30px;
     border-right: 1px solid #ccc;
-    @media @desktop-def {
-        height: inherit;
-    }    
+    // @media @desktop-def {
+    //     height: inherit;
+    // }    
 }
 
 
