--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -142,6 +142,9 @@ img{
             padding-right: 26px;
             font-size: 1.5em;
         }
+        &:hover,&:active,&:focus{
+            color: #fff;
+        }
     }
 }
 
