--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
@@ -162,11 +162,12 @@
                      .box-shadow(0 0px 0px 0 rgba(0, 0, 0, 0.12), 0 4px 2px 0 rgba(0, 0, 0, 0.12));
                      border: 1px solid #ccc;
                      padding: 25px;
-                     width: 80%;
+                     width: 100%;
                     @media @i-tab-landscape{
                             width: 85%;
                         }                    
                      h4 {
+                        font-size: 1.2em;
                             @media @i-tab-landscape{
                                 font-size: 1.1em;
                             }
@@ -218,3 +219,4 @@
          
      }
  }
+
