--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -1871,15 +1871,12 @@ lesshat-selector {
   box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.12), 0 4px 2px 0 rgba(0, 0, 0, 0.12);
   border: 1px solid #ccc;
   padding: 25px;
-  width: 100%;
+  width: 80%;
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   .cbp_tmtimeline > li .contentPiece .cbp_tmlabel > div:first-child {
     width: 85%;
   }
-}
-.cbp_tmtimeline > li .contentPiece .cbp_tmlabel > div:first-child h4 {
-  font-size: 1.2em;
 }
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
   .cbp_tmtimeline > li .contentPiece .cbp_tmlabel > div:first-child h4 {
@@ -1933,6 +1930,12 @@ lesshat-selector {
   .cbp_tmtimeline:before {
     left: 19.2%;
   }
+}
+#timeline_lecture .cbp_tmlabel > div:first-child {
+  width: 100%;
+}
+#timeline_lecture .cbp_tmlabel > div:first-child > h4 {
+  font-size: 1.2em;
 }
 .direction-center {
   max-width: 95%;
