logos width fixed in tab

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_login.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_login.less
@@ -26,12 +26,18 @@
          margin: 0;
          & > img {
              width: 7%;
+             @media (max-width: 1024px) {
+                 width: 12%;
+             }             
          }
      }
      .slogan {
          margin: 10px 0;
          & > img {
              width: 12%;
+             @media (max-width: 1024px) {
+                 width: 12%;
+             }             
          }
      }
  }
