--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -629,11 +629,21 @@ nav.wallnut-nav .walnut-account > li > a:focus {
 .signin-header .logo > img {
   width: 7%;
 }
+@media (max-width: 1024px) {
+  .signin-header .logo > img {
+    width: 12%;
+  }
+}
 .signin-header .slogan {
   margin: 10px 0;
 }
 .signin-header .slogan > img {
   width: 12%;
+}
+@media (max-width: 1024px) {
+  .signin-header .slogan > img {
+    width: 12%;
+  }
 }
 .school-login {
   -webkit-box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
