--- a/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/edit-module/module-description/templates/collection-details.html
@@ -139,7 +139,7 @@
         </div>
         <div class="row m-b-10">
             <div class="col-md-6">
-                <label class="form-label">Marks<span class="text-error">*</span></label>
+                <label class="form-label">Marks</label>
                 <input id="total-marks-final" name="marks" class="pull-left" placeholder="Enter Marks" type="text"  />
             </div>
             <div class="col-md-6">
@@ -149,7 +149,7 @@
         </div>
         <div class="row m-b-10">
             <div class="col-md-6">
-                <label class="form-label">Duration<span class="text-error">*</span></label>
+                <label class="form-label">Duration</label>
                 <input id="total-time-marks-set" type="hidden" value="0"/>
                 <input id="total-time-final" name="duration" class="pull-left" placeholder="Enter Duration" type="text"/> &nbsp;{{minshours}}
                 <div class="clearfix"></div>
