--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -724,7 +724,6 @@ nav {
     border-bottom: 1px solid #eee;
     padding-bottom: 10px;
     .icon {
-        padding-right: 15px;
         a{
             .transition(all .2s ease-in-out);
             &:hover{
@@ -735,6 +734,7 @@ nav {
     .welcome-text {
         font-weight: bold;
         font-size: 1.3em;
+        padding-left: 15px;
         margin: 0;
         a {
             text-decoration: none;
