--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_create-account.less
@@ -54,6 +54,10 @@
                         margin: 0;
                         .mat-label,.mat-input,&:after,&:before{
                             width: 80%;
+                            .mandatory{
+                                color: #FF0D00;
+                                font-weight: bold;
+                            }
                         }
                     }
                 }
