--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -546,13 +546,13 @@
             right: inherit;
         }
          button {
-            background: #459290;
+            background: @quiz-link-color3;
             border: 2px solid #fff;
             border-radius: 10px;
              color: @color-white;
              padding: 12px 28px;
              &:hover{
-             	background: lighten(#7CC0BF, 10%);
+             	background: lighten(@quiz-link-color3, 10%);
              }
          }
      }
