--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
@@ -69,10 +69,12 @@
             margin-left: 0; 
             z-index: 1032;
             opacity: 0;
+            // display: none;
             filter: alpha(opacity=0);   
             position: absolute;
             text-align: center; 
             text-transform: none;
+            pointer-events: none;
             .transition(all 0.3s ease-in-out);
             &:after{
                 border-color: #fcea98 rgba(0, 0, 0, 0);
@@ -86,9 +88,10 @@
                 width: 0;
             }
         }    
-        &:hover{
+        &.generate-popover{
             & span{
                 opacity: 1;
+                pointer-events: auto;
                 filter: alpha(opacity=100);
                 top: -5.5em;
                 z-index: 1032;
