--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_dashboard.less
@@ -98,6 +98,12 @@
                 .transition(all 0.2s ease);
             }
         }
+        &.destroy-popover{
+            & span{
+                opacity: 0;
+                pointer-events:none;
+            }
+        }        
     }
     .quiz-img {
         .flex-basis(30%);
